react & react-dom production.min

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <title>Яндекс.Дом</title>
-    <script defer src="vendors/react-development.js"></script>
-    <script defer src="vendors/react-dom.development.js"></script>
+    <script defer src="vendors/react.production.min.js"></script>
+    <script defer src="vendors/react-dom.production.min.js"></script>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
